lib-docs/sass/docs.sass
// Docs
// ====
// Generation of css for the getkickstart.com homepage.
// Page-level styling goes elsewhere.

// Choose your theme
@import chosen-theme

// Basic layout
// ------------

$footerHeight: 75px

html, body
  height: 100%

body
  background-color: map-get($white, darkest)

.wrapper
  +wrapper

.bleed
  max-width: $xl-monitor
  margin: 0px auto
  display: block
  position: relative
  margin-bottom: -$footerHeight
  min-height: 100%

  @media screen and (min-width: $xxl-monitor)
    max-width: $xxl-monitor

// Navigation
// ----------

.main-navigation
  +navbar($collapse: true, $layout: 'fluid', $background-color: transparent)

  nav.expand
    background: white
    color: map-get($black, light)

    > ul > li > a:not([role=button])
      color: map-get($black, light)

    svg
      fill: map-get($black, light)

  .svg-logo-small
    width: 90px
    height: 20px
    fill: white
    margin-bottom: -4px

// Footer
// ------

footer.main, .push
  height: $footerHeight

footer.main
  background: darken(map-get($colors, blue), 15%)
  padding: $space 0
  color: white

  p
    text-align: center
    margin-bottom: 0

  a
    color: white
    text-decoration: underline

  .eio-logo
    display: inline-block
    vertical-align: middle
    width: 25px
    height: 25px

    svg
      fill: white

.growl
  &.warning
    background-color: map-get($colors, yellow)
    color: black

// Iframes
// -------

iframe.animation
  max-width: 500px
  height: 200px
  display: block
  margin-left: auto
  margin-right: auto
  margin-bottom: 25px
  overflow: hidden

// Icons
// -----

svg.icon
  +icon

// Components
// ----------

// Buttons
.button
  +button

  &.button-primary
    +button-color($primary-color)

// Notices
.notice
  +label

// Switches

=switch
  +switch-default(map-get($colors, blue))

.switch
  +switch

